easylife-ai/easylife-ai/k8s/base/ingress-mlflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: easylife
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  tls:
    - hosts: [ mlflow.easylife-ai.com ]
      secretName: mlflow-tls
  rules:
    - host: mlflow.easylife-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
